# mcytomap-core

./: .dockerignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  codemeta.json  environment.yml  mcytomap_ets.py  provenance.py  pyproject.toml  reproduce_values.py  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  PROVENANCE.md  REPRODUCIBILITY.md  VALIDATION.md
outputs/: CHECKSUMS.sha256  expected_console_output.txt  published_values.csv  published_values.json
tests/: test_provenance.py  test_reproduce.py
